--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   width: 90%;
   margin: 20px auto;
   border: 5px solid #00ff7f;
-
+  font-size: 1.5rem;
   animation: pulse 2s infinite;
 }
 
